--- a/src/com/loket/form/laporan_diva.form
+++ b/src/com/loket/form/laporan_diva.form
@@ -85,7 +85,7 @@
               </TableColumnModel>
             </Property>
             <Property name="gridColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="fa" green="f0" red="e6" type="rgb"/>
+              <Color blue="c8" green="c8" red="c8" type="rgb"/>
             </Property>
             <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
               <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
