--- a/src/com/loket/komponen/Card.form
+++ b/src/com/loket/komponen/Card.form
@@ -27,9 +27,9 @@
                   <Component id="lbTitle" min="-2" max="-2" attributes="0"/>
                   <Component id="lbIcon" min="-2" max="-2" attributes="0"/>
                   <Component id="lbValues" min="-2" max="-2" attributes="0"/>
-                  <Component id="lbDeskripsi" alignment="0" min="-2" pref="146" max="-2" attributes="0"/>
+                  <Component id="lbDeskripsi" alignment="0" min="-2" pref="225" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="119" max="32767" attributes="0"/>
+              <EmptySpace pref="40" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -43,7 +43,7 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="lbValues" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="lbDeskripsi" pref="135" max="32767" attributes="0"/>
+              <Component id="lbDeskripsi" pref="171" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -87,7 +87,7 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="ff" green="ff" red="ff" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="&lt;html&gt;tst&lt;br&gt;Stst&lt;br&gt;tsts&lt;br&gt;Cihuy&lt;/html&gt; "/>
+        <Property name="text" type="java.lang.String" value="&lt;html&gt;Deskripsi&lt;br&gt;Deskripsi&lt;br&gt;Deskripsi&lt;br&gt;Deskripsi&lt;/html&gt; "/>
       </Properties>
     </Component>
   </SubComponents>
